deploy/network-policies/allow-reporting-to-ledger.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-reporting-to-ledger
  namespace: payments

spec:

  podSelector:
    matchLabels:
      app: ledger-api


  policyTypes:

    - Ingress


  ingress:

    - from:

        - namespaceSelector:

            matchLabels:

              kubernetes.io/metadata.name: payments


          podSelector:

            matchLabels:

              app: reporting


      ports:

        - protocol: TCP
          port: 8080
